Mahout Change Log

Release 0.8 - unreleased

__MAHOUT-1224: Add the option of running a StreamingKMeans pass in the Reducer before BallKMeans (dfilimon)

  MAHOUT-993:  Some vector dumper flags are expecting arguments. (Andrew Look via robinanil)

  MAHOUT-1228: Cleanup .gitignore (Stevo Slavic via ssc)

  MAHOUT-1047: CVB hangs after completion (Angel Martinez Gonzalez via smarthi)
  
  MAHOUT-1235: ParallelALSFactorizationJob does not use VectorSumCombiner (ssc)

  MAHOUT-1230: SparceMatrix.clone() is not deep copy (Maysam Yabandeh via tdunning)
  
  MAHOUT-1232: VectorHelper.topEntries() throws a NPE when number of NonZero elements in vector < maxEntries (smarthi)

  MAHOUT-1229: Conf directory content from Mahout distribution archives cannot be unpacked (Stevo Slavic via smarthi)
  
  MAHOUT-1213: SSVD job doesn't clean it's temp dir, and fails when seeing it again (smarthi)

__MAHOUT-1223: Fixed point skipped in StreamingKMeans when iterating through centroids from a reducer (dfilimon)

__MAHOUT-1222: Fix total weight in FastProjectionSearch (dfilimon)

__MAHOUT-1219: Remove LSHSearcher from StreamingKMeansTest. It causes it to sometimes fail (dfilimon)

  MAHOUT-1221: SparseMatrix.viewRow is sometimes readonly. (Maysam Yabandeh via smarthi)

__MAHOUT-1219: Remove LSHSearcher from SearchQualityTest. It causes it to fail, but the failure is not very meaningful (dfilimon)

__MAHOUT-1217: Nearest neighbor searchers sometimes fail to remove points: fix in FastProjectionSearch's searchFirst (dfilimon)

__MAHOUT-1216: Add locality sensitive hashing and a LocalitySensitiveHash searcher (dfilimon)

__MAHOUT-1181: Adding StreamingKMeans MapReduce classes (dfilimon)

  MAHOUT-1212: Incorrect classify-20newsgroups.sh file description (Julian Ortega via smarthi)
   
  MAHOUT-1209: DRY out maven-compiler-plugin configuration (Stevo Slavic via smarthi) 

  MAHOUT-1207: Fix typos in description in parent pom (Stevo Slavic via smarthi)  
