@@ -1,0 +1,43 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.apache.mahout.classifier.sgd;
+
+import org.apache.mahout.common.MahoutTestCase;
+import org.junit.Test;
+
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
+
+public class LogisticModelParametersTest extends MahoutTestCase {
+
+  @Test
+  public void serializationWithoutCsv() throws IOException {
+    LogisticModelParameters params = new LogisticModelParameters();
+    params.setTargetVariable("foo");
+    params.setTypeMap(Collections.<String, String>emptyMap());
+    params.setTargetCategories(Arrays.asList("foo", "bar"));
+    params.setNumFeatures(1);
+    params.createRegression();
+
+    //MAHOUT-1196 should work without "csv" being set
+    params.saveTo(new ByteArrayOutputStream());
+  }
+
+}
